--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.1.2",
+    "inquirer": "^13.0.2",
     "puppeteer": "^24.29.1",
     "request-promise": "^4.2.6"
   }
